[package]
name = "zeus-attack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Attack strategies for Zeus — Dictionary, BruteForce, Hybrid, Rule-based (Strategy Pattern)"

[dependencies]
zeus-core   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
futures     = { workspace = true }
tokio-stream = { workspace = true }
rand        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
