[package]
name = "zeus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types for Zeus"

[dependencies]
async-trait  = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
parking_lot  = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
