[package]
name = "zeus-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Zeus cryptographic helpers — hashing, encoding, auth primitives"

[dependencies]
md-5      = { workspace = true }
md4       = { workspace = true }
sha1      = { workspace = true }
sha2      = { workspace = true }
hmac      = { workspace = true }
hex       = { workspace = true }
base64    = { workspace = true }
thiserror = { workspace = true }
