[package]
name = "zeus-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zeus-core    = { workspace = true }
zeus-crypto  = { workspace = true }
async-trait  = { workspace = true }
dashmap      = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
bytes        = { workspace = true }
tokio-rustls = { workspace = true }
rustls       = { workspace = true }
webpki-roots = { workspace = true }
reqwest      = { workspace = true }
serde_json   = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
rand         = { workspace = true }
futures      = { workspace = true }
md-5         = { workspace = true }
sha1         = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
hex          = { workspace = true }
base64       = { workspace = true }
des          = "0.8"
